--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -7,6 +7,33 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    {{{body}}}
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills float-right">
+            <li class="nav-item">
+              <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/login">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/register">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/logout">Logout</a>
+            </li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">Project name</h3>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-12">
+          {{{body}}}
+        </div>
+      </div>
+
+    </div> <!-- /container -->
   </body>
 </html>
