--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,1 +1,31 @@
-REGISTER
+{{#if errors}}
+  {{#each errors}}
+    <div class='alert alert-danger'>{{msg}}</div>
+    {{/each}}
+  {{/if}}
+<form method='post' action='/users/register'>
+  <div class="form-group">
+    <label for="email">Name:</label>
+    <input type="text" class="form-control" id="name" name='name'>
+  </div>
+  <div class="form-group">
+    <label for="username">Username:</label>
+    <input type="text" class="form-control" id="name" name='username'>
+  </div>
+  <div class="form-group">
+    <label for="email">Email address:</label>
+    <input type="email" class="form-control" id="email" name='email'>
+  </div>
+  <div class="form-group">
+    <label for="pwd">Password:</label>
+    <input type="password" class="form-control" id="pwd" name='password'>
+  </div>
+  <div class="form-group">
+    <label for="pwd">Password:</label>
+    <input type="password" class="form-control" id="pwd" name='password2'>
+  </div>
+  <div class="checkbox">
+    <label><input type="checkbox"> Remember me</label>
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
