--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -25,11 +25,26 @@
             </li>
           </ul>
         </nav>
-        <h3 class="text-muted">Project name</h3>
+        <h3 class="text-muted">Pinboard App</h3>
       </div>
 
       <div class="row">
         <div class="col-lg-12">
+          {{#if success_msg}}
+            <div class='alert alert-success'>
+              {{success_msg}}
+            </div>
+          {{/if}}
+          {{#if error_msg}}
+            <div class='alert alert-danger'>
+              {{error_msg}}
+            </div>
+          {{/if}}
+          {{#if error}}
+            <div class='alert alert-danger'>
+              {{error}}
+            </div>
+          {{/if}}
           {{{body}}}
         </div>
       </div>
