--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,11 @@
-<form>
+<form  method='post' action='/users/login'>
   <div class="form-group">
-    <label for="email">Email address:</label>
-    <input type="email" class="form-control" id="email">
+    <label for="username">Username:</label>
+    <input type="text" class="form-control" name='username'>
   </div>
   <div class="form-group">
     <label for="pwd">Password:</label>
-    <input type="password" class="form-control" id="pwd">
+    <input type="password" class="form-control" name='password'>
   </div>
   <div class="checkbox">
     <label><input type="checkbox"> Remember me</label>
