--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -14,15 +14,23 @@
             <li class="nav-item">
               <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
+
+            {{#if user}}
+
+            <li class="nav-item">
+              <a class="nav-link" href="/users/logout">Logout</a>
+            </li>
+
+            {{else}}
+
             <li class="nav-item">
               <a class="nav-link" href="/users/login">Login</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/users/register">Register</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/logout">Logout</a>
-            </li>
+            {{/if}}
+
           </ul>
         </nav>
         <h3 class="text-muted">Pinboard App</h3>
