--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,10 @@
-<img src="../content/Koons.jpg" class="image" alt="Cinque Terre">
+<form  method='post' action='/pinboards/pinboard'>
+  <div class="form-group">
+    <label for="username">pinboard name:</label>
+    <input type="text" class="form-control" name='pinboardName'>
+  </div>
+  <div class="checkbox">
+    <label><input type="checkbox"> Remember me</label>
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
