can add bookmarklet to a pinboard

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,6 +2,8 @@
   <div class="form-group">
     <label for="username">pinboard name:</label>
     <input type="text" class="form-control" name='pinboardName'>
+    <label for="username">bookmarklets:</label>
+    <input type="text" class="form-control" name='bookmarklets'>
   </div>
   <div class="checkbox">
     <label><input type="checkbox"> Remember me</label>
