--- a/views/pinboards.handlebars
+++ b/views/pinboards.handlebars
@@ -1,11 +1,18 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
 <p> Welcome {{{username}}} <p>
 <form  method='get' action='/pinboards/new'>
-  <button type="submit" class="btn btn-default">add a pinboad</button>
+  <button type="submit" class="btn btn-default"> Add a pinboard </button>
 </form>
 <div>
   {{# each items}}
-    <article>
-      <div> {{ this.name }}
-    </article>
+  <a class="list-group-item clearfix">
+      {{this.name}}
+      <span class="pull-right">
+        <form  method='post' action='/pinboards/bookmarklets'>
+          <button type='submit' value= {{this._id}} name='bookmarkId' class="btn btn-default" aria-hidden="true"> View {{this.bookmarklets.length}} </button>
+        </form>
+      </span>
+    </span>
+  </a>
   {{/each}}
 </div>
