--- a/views/pinboards.handlebars
+++ b/views/pinboards.handlebars
@@ -3,7 +3,7 @@
   <strong>Hi {{{username}}} !</strong> You can view your <strong>pinboards below</strong>.
 </div>
 <div>
-  <p class="list-group-item active">My pinboard:</p>
+  <p class="list-group-item active">My pinboards:</p>
   {{# each items}}
     <a class="list-group-item clearfix">
         {{this.name}}
