--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,6 +65,10 @@ body {
   margin-top: 1.5rem;
 }
 
+.list-group-item {
+  margin-top: 20px;
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 48em) {
   /* Remove the padding we set earlier */
