--- a/views/newPinboard.handlebars
+++ b/views/newPinboard.handlebars
@@ -2,11 +2,11 @@
 <form method='post' action='/pinboards/pinboard'>
   <div class="form-group">
     <label for="exampleInputEmail1">Pinboard Name:</label>
-    <input type="text" class="form-control" name='pinboardName' id="exampleInputEmail1" aria-describedby="emailHelp" >
+    <input type="text" class="form-control" name='pinboardName' id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="ex: Social Media">
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Add a First bookmarklet:</label>
-    <input type="text" class="form-control" name='bookmarklets' id="exampleInputPassword1">
+    <label for="exampleInputPassword1">Save a url as a bookmarklets:</label>
+    <input type="text" class="form-control" name='bookmarklets' id="exampleInputPassword1" placeholder="URL">
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
