--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -22,7 +22,7 @@
     <input type="password" class="form-control" id="pwd" name='password'>
   </div>
   <div class="form-group">
-    <label for="pwd">Password:</label>
+    <label for="pwd">Confirm password:</label>
     <input type="password" class="form-control" id="pwd" name='password2'>
   </div>
   <div class="checkbox">
